# ARES

./: .bandit  .check_documentation_changes.py  .dockerbuildkit  .documentation_pipeline.json  .env.DOPPLER_REQUIRED  .env.doppler.template  .gitignore  .mcp.json  .mcp.json.backup_1755309298  .mcp.json.backup_1755362923  .pre-commit-config.yaml  .pre-commit-config.yaml.backup.20250719  .pre-commit-config.yaml.pragmatic  .semgrep.json  ARCHITECTURE.md  CI_CD_COMPREHENSIVE_TEST_RESULTS.md  CI_CD_USAGE_GUIDE.md  CLAUDE.md  CONTEXT7_PERFORMANCE_VERIFICATION_REPORT.md  Dockerfile  Dockerfile.fixed  Documentation_Audit_Prompt.md  Makefile  Makefile.mcp  README.md  SECURITY_FIX_SUMMARY.md  SECURITY_REMEDIATION_REPORT.md  TASK_3_4_MCP_SERVER_VALIDATION_TESTS_COMPLETION_SUMMARY.md  TASK_4_1_1_PRECOMMIT_PARALLEL_OPTIMIZATION_COMPLETION.md  TASK_4_1_2_DOCKER_BUILD_OPTIMIZATION_COMPLETION.md  TASK_4_1_3_CI_CD_PIPELINE_OPTIMIZATION_COMPLETION.md  TASK_4_1_4_PERFORMANCE_MONITORING_COMPLETION.md  TASK_4_2_SECURITY_HARDENING_COMPLETION_REPORT.md  TASK_4_4_DEPLOYMENT_REPORT.md  TECHNICAL_SPECIFICATIONS.md  TEMPLATE_COMPLETE.md  TEMPLATE_SUMMARY.md  TEST_AI_REASONING_AUTOMATION.md  TEST_COVERAGE_COMPLETION_SUMMARY.md  alembic.ini  (+19 more)
.claude/: settings.json
.claude/agents/core/: code-archaeologist.md  code-reviewer.md  documentation-specialist.md  performance-optimizer.md
.claude/agents/orchestrators/: project-analyst.md  team-configurator.md  tech-lead-orchestrator.md
.claude/agents/specialized/django/: django-api-developer.md  django-backend-expert.md  django-orm-expert.md
.claude/agents/specialized/laravel/: laravel-backend-expert.md  laravel-eloquent-expert.md
.claude/agents/specialized/rails/: rails-activerecord-expert.md  rails-api-developer.md  rails-backend-expert.md
.claude/agents/universal/: api-architect.md  backend-developer.md  frontend-developer.md  tailwind-css-expert.md  tailwind-frontend-expert.md
.github/workflows/: CUSTOMIZATION_REPORT.md  ci.yml  docker-build-cache.yml  fast-ci.yml  health-monitor.yml  lint-repair-validation.yml  performance-monitoring.yml
config/: mcp_integration.py
data/: ARES_test.db
docs/: ARCHITECTURE.md  CONTRIBUTING.md  PRECOMMIT_PARALLEL_OPTIMIZATION.md  README.md  TROUBLESHOOTING.md  index.md  installation.md  quickstart.md
docs/api/: verification.md
docs/components/: completion-verifier.md
docs/guides/: quickstart.md
migrations/: env.py
migrations/versions/: 2025_08_02_0254-f03866ea3853_initial_schema_creation.py  2025_08_02_0430-8f232196a1ac_add_documentation_agent_models.py
monitoring/: health_monitor.py  monitoring_config.yaml
project_plan/: AGENT_COORDINATION_LOG.md  DEVELOPMENT_STATUS.md  DIRECTORY_STRUCTURE.md  INTEGRATION_CHECKPOINTS.md  PROJECT_ROADMAP.md  README.md  TECHNICAL_DEBT_REGISTRY.md  agent_reliability_enforcement_plan.md
project_plan/config/: documentation_config.json  project_config.yaml
project_plan/current/: CURRENT_PROGRESS_TRACKER.md
project_plan/scripts/: generate_report.sh  update_tracker.py
project_plan/templates/: milestone_template.md
project_plan/tracker/: AGENT_PERFORMANCE_TRACKER.md  MILESTONE_TRACKER.md  Phase 2 - Sequential Thinking Breakdown .md
project_plan_standardized/: PROJECT_PLAN_INDEX.md  README.md  makefile_docs_integration.mk  setup_project_tracking.sh
project_plan_standardized/git_hooks/: post-commit
scripts/: backup.sh  benchmark_precommit_parallel.py  ci_performance_monitor.py  customize_template.py  docker-build-optimized.sh  finalize_template.sh  init-db.sql  performance_baseline_validator.py  performance_regression_detector.py  setup_project.sh  validate_template.py
src/ares/: __init__.py  cli.py  main.py
src/ares/api/: __init__.py
src/ares/api/routes/: __init__.py  agents.py  enforcement.py  health.py  project_analytics.py  project_bulk_operations.py  project_tracking.py
src/ares/api/routes/schemas/: __init__.py  project_tracking.py
src/ares/cli/: __init__.py
src/ares/coordination/: __init__.py  agent_registry.py  routing_manager.py  task_coordinator.py  workflow_engine.py
src/ares/core/: __init__.py  config.py
src/ares/dashboard/: __init__.py  router.py  schemas.py
src/ares/dashboard/templates/: dashboard.html
src/ares/mcp_server/: __init__.py  client.py  server.py
src/ares/models/: __init__.py  agent.py  base.py  documentation.py  enforcement.py  mcp_connection.py  project_tracking.py  reliability.py  task.py
src/ares/protocols/: __init__.py
src/ares/services/: __init__.py  agent_coordination_service.py  documentation_service.py  schemas.py
src/ares/utils/: __init__.py  security_utils.py
src/ares/verification/: __init__.py
src/ares/verification/behavior_monitoring/: __init__.py  monitor.py
src/ares/verification/completion/: __init__.py  schemas.py  verifier.py
src/ares/verification/proof_of_work/: __init__.py  collector.py  schemas.py
src/ares/verification/rollback/: __init__.py  manager.py
src/ares/verification/tool_validation/: __init__.py  schemas.py  validator.py
tests/: __init__.py  conftest.py  test_coverage_summary.md
tests/agent_behavior/: __init__.py
tests/agents/: __init__.py  test_agent_placeholder.py
tests/coordination/: __init__.py
tests/enforcement/: __init__.py  test_enforcement_placeholder.py
tests/integration/: test_integration_placeholder.py
tests/main/: __init__.py
tests/mcp/: __init__.py  test_mcp_placeholder.py
tests/models/: test_documentation_models.py
tests/performance/: __init__.py  test_performance_placeholder.py
tests/proof_of_work/: __init__.py
tests/unit/: __init__.py  test_config.py  test_main.py
tests/verification/: __init__.py
