# ARES - Agent Reliability Enforcement System - Production-ready multi-agent coordination
# Standardized UV Workspace pyproject.toml Template v2.0
# Python >=3.12,<3.14 with Hatchling build system - Phase 2 Day 2 Standard

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "ARES"
version = "0.1.0"
description = "Agent Reliability Enforcement System - Production-ready multi-agent coordination"
authors = [
    {name = "ARES Development Team", email = "dev@ares-system.ai"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12,<3.13"
keywords = ["ARES", "python", "ai", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # Core framework (standardized across workspace)
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    # Database & Storage
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    # Utilities
    "click>=8.1.7",
    "rich>=13.7.1",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    "structlog>=24.1.0",
    # HTTP clients
    "httpx>=0.27.0",
    "websockets>=12.0",
    # Agent Framework
    "celery[redis]>=5.3.0",
    "kombu>=5.3.0",
    # AI/ML capabilities
    "openai>=1.30.0",
    "anthropic>=0.25.0",
    # Graph databases (for agent coordination)
    "neo4j>=5.0.0",
    # Monitoring and reliability
    "prometheus-client>=0.20.0",
    "psutil>=5.9.0",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
# Core development groups (standardized across workspace)
test = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-benchmark>=4.0.0",
    "coverage[toml]>=7.4.0",
    "hypothesis>=6.100.0",
    "httpx>=0.27.0",
]

format = [
    "ruff>=0.4.0",
]

lint = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-requests>=2.31.0",
    "types-pyyaml>=6.0.12",
    "types-redis>=4.6.0",
]

security = [
    "bandit[toml]>=1.7.8",
    "safety>=3.1.0",
    "detect-secrets>=1.5.0",
]

docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
]

dev = [
    "pre-commit>=3.7.0",
]

# Agent-specific groups
agents = [
    "openai>=1.30.0",
    "anthropic>=0.25.0",
]

reliability = [
    "prometheus-client>=0.20.0",
    "psutil>=5.9.0",
]

graph = [
    "neo4j>=5.0.0",
    "networkx>=3.0.0",
]


# Convenience group that includes everything for development
all = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-benchmark>=4.0.0",
    "coverage[toml]>=7.4.0",
    "hypothesis>=6.100.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-requests>=2.31.0",
    "types-pyyaml>=6.0.12",
    "types-redis>=4.6.0",
    "bandit[toml]>=1.7.8",
    "safety>=3.1.0",
    "detect-secrets>=1.5.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
    "pre-commit>=3.7.0",
    "openai>=1.30.0",
"anthropic>=0.25.0",
"prometheus-client>=0.20.0",
"psutil>=5.9.0",
"neo4j>=5.0.0",

]

[project.urls]
Homepage = "https://github.com/user/ARES"
Repository = "https://github.com/user/ARES"
Issues = "https://github.com/user/ARES/issues"
Documentation = "https://user.github.io/ARES"

[project.scripts]
ARES = "src.ARES.cli:main"

[dependency-groups]
dev = [
    "black>=25.1.0",
]

# ================================================================================
# UV CONFIGURATION - CANONICAL VIRTUAL ENVIRONMENT
# ================================================================================
[tool.uv]
managed = true
package = true

dev-dependencies = [
    # Development tools
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",

    # Testing framework
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "coverage[toml]>=7.4.0",

    # Security scanning
    "bandit[toml]>=1.7.8",
    "safety>=3.1.0",
    "detect-secrets>=1.5.0",

    # Documentation
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
]

# ================================================================================
# COVERAGE CONFIGURATION
# ================================================================================
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# ================================================================================
# MYPY CONFIGURATION - PRAGMATIC SETTINGS
# ================================================================================
[tool.mypy]
python_version = "3.12"

# Explicit package base to fix module path issues
explicit_package_bases = true
mypy_path = ["src"]

# RELAXED settings for real-world development
disallow_untyped_defs = false          # Don't require types everywhere
disallow_incomplete_defs = false       # Allow partial typing
warn_return_any = false                # Don't warn about Any
warn_unused_ignores = false            # Don't warn about unused ignores
disallow_untyped_decorators = false    # Don't require decorator typing

# Keep these - they catch real bugs
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Useful settings
ignore_missing_imports = true
show_error_codes = true
pretty = true

exclude = ["docs/", "build/", "dist/", ".venv/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
warn_return_any = false

# ================================================================================
# RUFF CONFIGURATION - PRAGMATIC LINTING
# ================================================================================
[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.format]
# Ruff formatting (replaces Black)
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E4",   # Import errors only
    "E7",   # Statement errors only
    "E9",   # Runtime errors only
    "F",    # Pyflakes (undefined vars, unused imports)
    "I",    # Import sorting
    "B",    # Bugbear (likely bugs)
    "S",    # Security issues
    "UP",   # Deprecated syntax
]

ignore = [
    "E501",    # Line too long (handled by formatter)
    "S101",    # Use of assert (fine in development)
    "S105",    # Hardcoded password (too many false positives)
    "S106",    # Hardcoded password (too many false positives)
    "S107",    # Hardcoded password (too many false positives)
    "B008",    # Function calls in defaults (sometimes needed)
]

exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "build",
    "dist",
    "docs",
    "*.egg-info",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "B018", "B011"]  # Be lenient in tests
"scripts/*" = ["S603", "S607"]        # Allow subprocess in scripts

# ================================================================================
# BANDIT SECURITY CONFIGURATION
# ================================================================================
[tool.bandit]
exclude_dirs = ["tests", "docs", "venv", ".venv", "migrations"]
# Strict security configuration - only skip development-related issues
skips = [
    "B101",  # assert_used (fine in development/testing)
    "B110",  # try_except_pass (acceptable for error handling)
]
# Enable all security tests including high severity ones
severity = "high"
confidence = "high"
# Additional security checks
tests = [
    "B102",  # exec_used
    "B103",  # set_bad_file_permissions
    "B104",  # hardcoded_bind_all_interfaces
    "B105",  # hardcoded_password_string
    "B106",  # hardcoded_password_funcarg
    "B107",  # hardcoded_password_default
    "B301",  # pickle
    "B302",  # marshal
    "B303",  # md5
    "B304",  # des
    "B305",  # cipher
    "B306",  # mktemp_q
    "B307",  # eval
    "B308",  # mark_safe
    "B309",  # httpsconnection
    "B310",  # urllib_urlopen
    "B311",  # random
    "B312",  # telnetlib
    "B313",  # xml_bad_cElementTree
    "B314",  # xml_bad_ElementTree
    "B315",  # xml_bad_expatreader
    "B316",  # xml_bad_expatbuilder
    "B317",  # xml_bad_sax
    "B318",  # xml_bad_minidom
    "B319",  # xml_bad_pulldom
    "B320",  # xml_bad_etree
    "B321",  # ftplib
    "B322",  # input
    "B323",  # unverified_context
    "B324",  # hashlib_new_insecure_functions
    "B325",  # tempnam
    "B401",  # import_telnetlib
    "B402",  # import_ftplib
    "B403",  # import_pickle
    "B404",  # import_subprocess
    "B405",  # import_xml_etree
    "B406",  # import_xml_sax
    "B407",  # import_xml_expat
    "B408",  # import_xml_minidom
    "B409",  # import_xml_pulldom
    "B410",  # import_lxml
    "B411",  # import_xmlrpclib
    "B412",  # import_httpoxy
    "B501",  # request_with_no_cert_validation
    "B502",  # ssl_with_bad_version
    "B503",  # ssl_with_bad_defaults
    "B504",  # ssl_with_no_version
    "B505",  # weak_cryptographic_key
    "B506",  # yaml_load
    "B507",  # ssh_no_host_key_verification
    "B601",  # paramiko_calls
    "B602",  # subprocess_popen_with_shell_equals_true
    "B603",  # subprocess_without_shell_equals_true
    "B604",  # any_other_function_with_shell_equals_true
    "B605",  # start_process_with_a_shell
    "B606",  # start_process_with_no_shell
    "B607",  # start_process_with_partial_path
    "B608",  # hardcoded_sql_expressions
    "B609",  # linux_commands_wildcard_injection
    "B610",  # django_extra_used
    "B611",  # django_rawsql_used
    "B701",  # jinja2_autoescape_false
    "B702",  # use_of_mako_templates
    "B703",  # django_mark_safe
]


# Enhanced security reporting
[tool.bandit.reports]
format = "json"
output = "bandit-security-report.json"

# ================================================================================
# PYTEST CONFIGURATION
# ================================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=src --cov-report=html --cov-report=term-missing"
asyncio_mode = "auto"
